@startuml loadObj_sequence.png
actor User
participant "loadObj" as LO
participant "_loadObj" as _LO
participant "prepareTextureFromJpegFile" as Tex
participant "Object" as Obj
participant "TriMesh" as Mesh

User -> LO : loadObj("model.obj", out_object)
LO -> _LO : _loadObj(...) // 頂点・三角形・マテリアル読み込み
_LO --> LO : InternalVertices,\nInternalTriangles,\nInternalMaterials

loop 各マテリアルグループ
    LO -> Mesh : TriMesh作成・データ格納
    alt テクスチャ指定あり
        LO -> Tex : prepareTextureFromJpegFile()
        Tex --> LO : GLuint テクスチャID
    else テクスチャなし
        LO -> Mesh : テクスチャID = 0
    end
    LO -> Obj : meshes.push_back(Mesh)
end

LO --> User : true / false（成功 or 失敗）
@enduml
@startuml loadObj_sequence.png
actor User
participant "loadObj" as LO
participant "_loadObj" as _LO
participant "prepareTextureFromJpegFile" as Tex
participant "Object" as Obj
participant "TriMesh" as Mesh

User -> LO : loadObj("model.obj", out_object)
LO -> _LO : _loadObj(...) // 頂点・三角形・マテリアル読み込み
_LO --> LO : InternalVertices,\nInternalTriangles,\nInternalMaterials

loop 各マテリアルグループ
    LO -> Mesh : TriMesh作成・データ格納
    alt テクスチャ指定あり
        LO -> Tex : prepareTextureFromJpegFile()
        Tex --> LO : GLuint テクスチャID
    else テクスチャなし
        LO -> Mesh : テクスチャID = 0
    end
    LO -> Obj : meshes.push_back(Mesh)
end

LO --> User : true / false（成功 or 失敗）
@enduml
@startuml inline_umlgraph_2.png
participant Main as M
participant Camera as C
participant OpenGL as GL

M -> C: スクリーン中心と各ベクトル（X, Y, Z）を取得
C -> M: スクリーン中心、Xベクトル、Yベクトル、Zベクトルを返す
M -> GL: GL_TEXTURE_2D を有効化
M -> GL: in_FilmTexture をバインド（使用するテクスチャを指定）
M -> GL: 頂点とUV座標を指定して矩形を描画
GL --> M: 描画完了を返す
@enduml
@startuml inline_umlgraph_4.png
participant Main as M
participant Camera as C
participant OpenGL as GL

M -> C: スクリーン中心と各ベクトル（X, Y, Z）を取得
C -> M: スクリーン中心、Xベクトル、Yベクトル、Zベクトルを返す
M -> GL: GL_TEXTURE_2D を有効化
M -> GL: in_FilmTexture をバインド（使用するテクスチャを指定）
M -> GL: 頂点とUV座標を指定して矩形を描画
GL --> M: 描画完了を返す
@enduml
@startuml inline_umlgraph_6.png
main -> computeShading : シェーディング計算開始
computeShading -> computeRayHitNormal : 法線ベクトルを計算
computeShading -> computeDirectLighting : 直接光の計算（kd_max > 0）
computeDirectLighting ->computeShading: RGB値の3次元ベクトルdirect_light_contribution を返却
computeShading -> computeDiffuseReflection : 拡散反射を計算（確率 kd_max に基づく）
computeShading -> computeReflection : 鏡面反射を計算（確率 ks_max に基づく）
computeShading -> computeRefraction : 屈折を計算（確率 kt_max に基づく）
computeShading -> computeShading : 光の寄与を合算
computeShading -> main : シェーディング結果を返却
@enduml
@startuml inline_umlgraph_8.png
main -> computeShading : シェーディング計算開始
computeShading -> computeRayHitNormal : 法線ベクトルを計算
computeShading -> computeDirectLighting : 直接光の計算（kd_max > 0）
computeDirectLighting ->computeShading: RGB値の3次元ベクトルdirect_light_contribution を返却
computeShading -> computeDiffuseReflection : 拡散反射を計算（確率 kd_max に基づく）
computeShading -> computeReflection : 鏡面反射を計算（確率 ks_max に基づく）
computeShading -> computeRefraction : 屈折を計算（確率 kt_max に基づく）
computeShading -> computeShading : 光の寄与を合算
computeShading -> main : シェーディング結果を返却
@enduml
@startuml inline_umlgraph_11.png
main -> rayAreaLightIntersect : エリアライトとの交差計算開始
rayAreaLightIntersect -> rayAreaLightIntersect : ライトの中心座標と辺ベクトルを取得
rayAreaLightIntersect -> rayAreaLightIntersect : 法線ベクトルの計算（`light_normal`）
rayAreaLightIntersect -> rayAreaLightIntersect : レイと平面の交差距離 `t` を計算
rayAreaLightIntersect -> rayAreaLightIntersect : UV座標を計算し、エリアライトの範囲を確認
rayAreaLightIntersect -> rayAreaLightIntersect : 交差点情報を保存（`out_Result`）
@enduml
@startuml inline_umlgraph_12.png
 main -> rayTracing : レイと交差計算開始
 rayTracing -> rayTriangleIntersect : メッシュの三角形と交差計算
 rayTriangleIntersect -> rayTracing : 交差情報を取得（temp_hitに保存）
 rayTracing -> rayAreaLightIntersect : エリアライトとの交差計算
 rayAreaLightIntersect -> rayTracing : 交差情報を取得（temp_hitに保存）
 rayTracing -> rayTracing : 最短交差点情報を更新 \n交差距離t_min、インデックスなど
 rayTracing -> io_Hit : 最短交差点情報を保存
@enduml
@startuml inline_umlgraph_15.png
main -> rayAreaLightIntersect : エリアライトとの交差計算開始
rayAreaLightIntersect -> rayAreaLightIntersect : ライトの中心座標と辺ベクトルを取得
rayAreaLightIntersect -> rayAreaLightIntersect : 法線ベクトルの計算（`light_normal`）
rayAreaLightIntersect -> rayAreaLightIntersect : レイと平面の交差距離 `t` を計算
rayAreaLightIntersect -> rayAreaLightIntersect : UV座標を計算し、エリアライトの範囲を確認
rayAreaLightIntersect -> rayAreaLightIntersect : 交差点情報を保存（`out_Result`）
@enduml
@startuml inline_umlgraph_16.png
 main -> rayTracing : レイと交差計算開始
 rayTracing -> rayTriangleIntersect : メッシュの三角形と交差計算
 rayTriangleIntersect -> rayTracing : 交差情報を取得（temp_hitに保存）
 rayTracing -> rayAreaLightIntersect : エリアライトとの交差計算
 rayAreaLightIntersect -> rayTracing : 交差情報を取得（temp_hitに保存）
 rayTracing -> rayTracing : 最短交差点情報を更新 \n交差距離t_min、インデックスなど
 rayTracing -> io_Hit : 最短交差点情報を保存
@enduml
@startuml inline_umlgraph_18.png
loop 各メッシュに対して
    computeGLShading(mesh, lights)
end
@enduml
@startuml inline_umlgraph_20.png
loop 各メッシュに対して
    computeGLShading(mesh, lights)
end
@enduml
@startuml inline_umlgraph_21.png
loop フレーム毎
  MyOpenGLWidget_camera -> updateRayTracing : レンダリング進行
  alt m_isDirty == false
    updateRayTracing --> MyOpenGLWidget_camera : 何もしない
  else
    loop pixelsPerFrame回
      updateRayTracing -> "Camera::screenView" : ピクセルに対応するレイ生成
      updateRayTracing -> debug_computeNormalColor : 法線ベクトルから色を取得
      updateRayTracing -> "FilmBuffer::addSample" : 色を蓄積
      alt 最終ピクセル到達
        updateRayTracing -> m_isDirty : falseに設定
      end
    end
    updateRayTracing -> "FilmBuffer::updateFilmBuffer" : 平均色に変換
    updateRayTracing -> OpenGL : glTexSubImage2D によりテクスチャ転送
    updateRayTracing -> update : 再描画要求
  end
end
@enduml
@startuml inline_umlgraph_23.png
actor User

User -> MyOpenGLWidget_camera : 初期化 (initializeGL)
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : initializeFilmTexture() を呼び出し、filmバッファ作成(注意;initializeFilmTexture()はデバッグ用)

User -> MyOpenGLWidget_camera : ウィンドウリサイズ (resizeGL)
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : width, height 更新
MyOpenGLWidget_camera -> Camera : setAspectRatio()
MyOpenGLWidget_camera -> OpenGL : 古いテクスチャ削除
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : initializeFilmTexture() 再実行(注意;initializeFilmTexture()はデバッグ用)
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : updateProjectionMatrix()

User -> MyOpenGLWidget_camera : paintGL() を呼び出し
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : projection_and_modelview(g_Camera2)
MyOpenGLWidget_camera -> drawFilm : カメラ情報とfilmテクスチャを渡す
drawFilm -> Camera : getEyePoint(), getX/Y/ZVector(), getFocalLength() など呼び出し
drawFilm -> OpenGL : テクスチャをバインドし、矩形に貼り付けて描画
@enduml
@startuml inline_umlgraph_25.png
actor User
participant MyOpenGLWidget_camera
participant FilmBuffer
participant OpenGL

== 初期化処理 ==
User -> MyOpenGLWidget_camera : initializeGL()
MyOpenGLWidget_camera -> FilmBuffer : init(width, height)  // バッファを初期化

== レイトレーシング処理開始 ==
User -> MyOpenGLWidget_camera : ボタンを押すことでupdateRayTracing() を呼び出し
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : for-loop 各ピクセルに対して処理

== ピクセルごとにレイを発射 ==
loop 各ピクセル
    MyOpenGLWidget_camera -> MyOpenGLWidget_camera : debug_computeNormalColor(ray) // 法線を色に変換
    MyOpenGLWidget_camera -> FilmBuffer : addSample(i, j, color) // 色をバッファに追加
end

== サンプル蓄積後 ==
MyOpenGLWidget_camera -> FilmBuffer : updateFilmBuffer() // 積算値から平均色を算出

== OpenGLへ転送 ==
MyOpenGLWidget_camera -> FilmBuffer : getFilmBufferPtr() // GPU転送用ポインタ取得
MyOpenGLWidget_camera -> OpenGL : glTexSubImage2D(..., ptr) // GPUに転送して画面描画
@enduml
@startuml inline_umlgraph_27.png
actor User
User -> MyOpenGLWidget_camera : paintGL()
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : updateRayTracing()

loop 各ピクセル
    MyOpenGLWidget_camera -> Camera : screenView(i, j) -> Ray
    MyOpenGLWidget_camera -> rayTracing : 交差判定
    MyOpenGLWidget_camera -> computeRayHitNormal : 法線取得
    MyOpenGLWidget_camera -> debug_computeNormalColor : 色取得
    MyOpenGLWidget_camera -> FilmBuffer : addSample(i, j, color)
end

MyOpenGLWidget_camera -> FilmBuffer : updateFilmBuffer()
MyOpenGLWidget_camera -> OpenGL : glTexSubImage2D() による描画更新
@enduml
@startuml inline_umlgraph_28.png
class FilmBuffer {
    - int m_width, m_height
    - vector<float> m_filmBuffer
    - vector<float> m_accumulationBuffer
    - vector<int>   m_countBuffer

    + init(width, height)
    + reset()
    + addSample(i, j, color)
    + updateFilmBuffer()
    + getFilmBufferPtr()
}
@enduml
@startuml inline_umlgraph_31.png
actor User
participant MyOpenGLWidget_camera
participant Camera
participant Intersection
participant TriMesh
participant Geometry as "computeRayHitNormal"
participant FilmBuffer
participant OpenGL

== 初期化処理 ==
User -> MyOpenGLWidget_camera : initializeGL()
MyOpenGLWidget_camera -> FilmBuffer : init(width, height) // フィルムバッファを初期化

== レイトレーシング処理開始 ==
User -> MyOpenGLWidget_camera : updateRayTracing()
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : for文で次のピクセル(i, j)へ

loop updateRayTracing() 各ピクセル (1フレームあたり数千個)
    MyOpenGLWidget_camera -> Camera : screenView(i, j) // カメラからレイ生成
    Camera --> MyOpenGLWidget_camera : Ray

    MyOpenGLWidget_camera -> Intersection : rayTracing(g_Obj, {}, ray, ray_hit) // レイとシーン交差判定

    loop 各メッシュ・各三角形
    MyOpenGLWidget_camera -> Intersection : rayTriangleIntersect(mesh[m], tri[k], ray, temp_hit)
    alt ヒットかつ最短距離なら
        Intersection -> MyOpenGLWidget_camera : RayHit を更新
    end
end
    Intersection --> MyOpenGLWidget_camera : 最短距離のRayHit

    MyOpenGLWidget_camera -> Geometry : computeRayHitNormal(g_Obj, ray_hit) // 補間法線を取得
    Geometry --> MyOpenGLWidget_camera : 法線ベクトル

    MyOpenGLWidget_camera -> MyOpenGLWidget_camera : debug_computeNormalColor(ray) // 法線を色に変換
    MyOpenGLWidget_camera -> FilmBuffer : addSample(i, j, color) // 色をフィルムに加算
end


== 全ピクセル終了時 ==
MyOpenGLWidget_camera -> FilmBuffer : updateFilmBuffer() // 平均色を計算し表示用バッファを更新

== GPU転送・描画 ==
MyOpenGLWidget_camera -> FilmBuffer : getFilmBufferPtr() // 転送ポインタ取得
MyOpenGLWidget_camera -> OpenGL : glTexSubImage2D(..., ptr) // OpenGLに描画
@enduml
@startuml inline_umlgraph_32.png
actor User
participant "MyOpenGLWidget_camera" as Widget
participant "QTimer" as Timer
participant "Camera" as Cam
participant "Intersection" as Isect
participant "FilmBuffer" as Film
participant "OpenGL" as GL


activate Widget
== 初期化とタイマー開始 ==
note right of Widget: MyOpenGLWidget_cameraコンストラクタ
Widget -> Timer : connect(timeout, updateRayTracing)
Widget -> Timer : start(1) //タイマーをセット
Widget -> Widget : m_isDirty = false // 再レンダリングフラグ=false
deactivate Widget

== レンダリングループ (タイマー駆動) ==
User -> Widget : フレーム登録する
activate Widget
note right of Widget: フレーム登録されるとsetCamerakeyframe→resetRendering() により m_isDirtyフラグ変更
Widget -> Widget : m_isDirty = true // 再レンダリングフラグ=true
Widget -> Timer : trueになったことによりupdateRayTracing()の処理開始



Timer -> Widget : updateRayTracing()
activate Widget #peachpuff
note right of Widget: レイトレーシング開始

loop updateRayTracing 

Widget -> Cam : screenView(p_x, p_y, ray)
activate Cam
Cam --> Widget : out_Ray生成
deactivate Cam

Widget -> Widget : debug_computeNormalColor(ray)
activate Widget #LightBlue
note right of Widget: debug_computeNormalColor(ray)

== レイとオブジェクト・ライトの交差計算 ==
Widget -> Isect : rayTracing(g_Obj, g_AreaLights, ray, ray_hit)
activate Isect #Coral
note left of Isect #lightyellow: Intersection.cpp内rayTracingの処理

loop 各メッシュの各三角形に対して交差計算
    Isect -> Isect : rayTriangleIntersect(mesh, k, in_Ray, temp_hit)
    activate Isect #DarkSalmon
    Isect --> Isect : temp_hit
    deactivate Isect #DarkSalmon
end

loop 各エリアライトに対して交差計算
    Isect -> Isect : rayAreaLightIntersect(g_AreaLights, l, in_Ray, temp_hit)
    activate Isect #DarkSalmon
    Isect --> Isect : temp_hit
    deactivate Isect #DarkSalmon
end
Isect --> Widget : ray_hit (最短交差点)レイがシーン内のどの三角形（またはエリアライト）と最初に交差するかを返す
deactivate Isect #Coral


alt ヒットした場合 (ray_hit.mesh_idx >= 0)
    == 法線計算と色決定 ==
    Widget -> Isect : computeRayHitNormal(g_Obj, ray_hit)
    activate Isect #LightGreen
    Isect --> Widget : normalを返す
    deactivate Isect #LightGreen

    Widget --> Widget : color (法線から計算された出力色（RGB）を返す)
else ヒットしない場合
    Widget --> Widget : color (背景色)
end
deactivate Widget #LightBlue


== 計算結果をフィルムに蓄積 ==
Widget -> Film : addSample(i, j, color)//色をバッファに追加
activate Film
deactivate Film
end

== フィルムバッファ更新と描画 ==
Widget -> Film : updateFilmBuffer()// 平均色を計算し表示用バッファを更新
activate Film
Film --> Widget :
deactivate Film

Widget -> Film : getFilmBufferPtr()//GPU用転送ポインタ
activate Film
Film --> Widget : buffer_ptr
deactivate Film

Widget -> GL : glBindTexture(m_filmTexture)//GPUに転送して画面描画
Widget -> GL : glTexSubImage2D(..., buffer_ptr)
Widget -> GL : glBindTexture(0)

Widget -> Widget : update() // 再描画を要求 (paintGLが呼ばれる)
deactivate Widget #peachpuff
deactivate Widget
@enduml
@startuml inline_umlgraph_33.png
actor User

User -> MyOpenGLWidget_camera : 初期化 (initializeGL)
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : initializeFilmTexture() を呼び出し、filmバッファ作成 (※デバッグ用)

User -> MyOpenGLWidget_camera : ウィンドウリサイズ (resizeGL)
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : width, height 更新
MyOpenGLWidget_camera -> Camera : setAspectRatio()
MyOpenGLWidget_camera -> OpenGL : 古いテクスチャ削除
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : initializeFilmTexture() 再実行
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : updateProjectionMatrix()

User -> MyOpenGLWidget_camera : paintGL() を呼び出し
MyOpenGLWidget_camera -> MyOpenGLWidget_camera : projection_and_modelview(g_Camera2)
MyOpenGLWidget_camera -> drawFilm : カメラ情報とfilmテクスチャを渡す
drawFilm -> Camera : getEyePoint(), getX/Y/ZVector(), getFocalLength() を呼び出し
drawFilm -> OpenGL : テクスチャをバインドし、矩形に貼り付けて描画
@enduml
@startuml inline_umlgraph_38.png
main -> Camera : screenView(in_x, in_y, out_Ray)
Camera -> Camera : レイ生成処理を開始
Camera -> Camera : s = (in_x - 0.5) * m_ScreenWidth \nスクリーン上のx座標(0~1)をカメラ空間の物理的な横の長さに変換
Camera -> Camera : t = (0.5 - in_y) * m_ScreenHeight \nスクリーン上のy座標をカメラ空間の物理的な縦方向距離に変換
Camera -> Camera : out_Ray.o = m_EyePoint \nレイの起点（origin）をカメラの視点位置（m_EyePoint）に設定
Camera -> Camera : out_Ray.d = m_xVector * s + m_yVector * t - m_zVector * m_FocalLength \nレイの方向ベクトルを計算
Camera -> Camera : out_Ray.d.normalize() \nレイの方向ベクトルを正規化し、単位ベクトルに変換
@enduml
@startuml add_sample_simple.png
class FilmBuffer {
  + void addSample(int i, int j, const Eigen::Vector3d& color)
}
FilmBuffer -> m_accumulationBuffer : 色を加算
FilmBuffer -> m_countBuffer : サンプル数を+1
@enduml
@startuml film_buffer_init.png
class FilmBuffer {
  - int m_width
  - int m_height
  - std::vector<float> m_filmBuffer
  - std::vector<float> m_accumulationBuffer
  - std::vector<int> m_countBuffer
  --
  + void init(int width, int height)
  + void reset()
  + void addSample(int i, int j, const Eigen::Vector3d& color)
  + void updateFilmBuffer()
}
FilmBuffer -> m_filmBuffer : resize()
FilmBuffer -> m_accumulationBuffer : resize()
FilmBuffer -> m_countBuffer : resize()
@enduml
@startuml update_film.png
participant App as A
participant FilmBuffer as FB

A -> FB: addSample(i, j, color)（複数回）
A -> FB: updateFilmBuffer()
loop すべてのピクセル
    FB -> FB: accumulationBuffer ÷ countBuffer → filmBuffer に保存
end
@enduml
@startuml inline_umlgraph_39.png
class Object {
  - List<TriMesh> meshes
}

class TriMesh {
  - List<Vector3d> vertices
  - List<Vector3d> vertex_normals
  - List<Vector2d> tex_coords
  - List<int> triangles
  - Material material
}

class Material {
  - GLuint texture
  - Vector3d kd
  - Vector3d ks
  - Vector3d kt
  - double eta
}

Object --> "1..* すべて参照" TriMesh
TriMesh --> "1　マテリアル参照" Material
@enduml
@startuml inline_umlgraph_41.png
actor User

User -> MainWindow : スライダー操作などのユーザー入力
MainWindow -> MyOpenGLWidget : カメラパラメータを更新（FOV、位置など）
MyOpenGLWidget -> Camera : モデリング変換を適用（平行移動(setEyePoint)、回転、スケーリング）
Camera -> MyOpenGLWidget : ModelView行列を更新

MyOpenGLWidget -> Camera : 視野変換を適用（gluLookAt）
MyOpenGLWidget -> MyOpenGLWidget : 投影変換を適用（gluPerspective / glOrtho）
MyOpenGLWidget -> OpenGL : ビューポート変換を適用（glViewport）
MyOpenGLWidget -> OpenGL : シーンをレンダリング
@enduml
@startuml inline_umlgraph_42.png
actor User

User -> MainWindow : スライダー操作/マウス操作\n（拡縮、回転、平行移動）
MainWindow -> MyOpenGLWidget : setCameraEyePoint(QVector eyePoint)\n目の位置を更新
MyOpenGLWidget -> Camera : setEyePoint( QVector3D in_eyePoint )
Camera --> MyOpenGLWidget : QVector3D in_eyePoint\n目の位置を返す

MainWindow -> MyOpenGLWidget : setlookAtPoint(QVector3D lookatPoint)\n注視点の位置を更新
MyOpenGLWidget -> Camera : getEyePoint( QVector3D in_eyePoint )
Camera --> MyOpenGLWidget : QVector3D in_eyePoint\n目の位置を返す
MyOpenGLWidget -> Camera :lookAt( QVector3D in_LookAt, QVector3D in_Up )\n注視点を設定
Camera -> Camera  : lookAt( QVector3D in_LookAt, QVector3D in_Up )\nカメラの座標軸（m_xVector, m_yVector, m_zVector）を再設定


MyOpenGLWidget -> OpenGL : update()\nすべての処理が終わったら画面を再描画（正確な記述は次項）
@enduml
@startuml inline_umlgraph_43.png
actor User



MyOpenGLWidget -> MyOpenGLWidget : updateProjectionMatrix();\n投影変換を適用（gluPerspective / glOrtho）
MyOpenGLWidget -> OpenGL : glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT)\nカラーバッファ（画面上のピクセルデータ）と深度バッファ（奥行き情報）をクリア\nglViewport(0, 0, width * g_FrameSize_WindowSize_Scale_x, height * g_FrameSize_WindowSize_Scale_y);\n画面上で描画が行われる領域を設定

MyOpenGLWidget -> MyOpenGLWidget : projection_and_modelview(g_Camera);\nカメラの投影行列とモデルビュー行列を設定
MyOpenGLWidget -> OpenGL : glEnable(GL_DEPTH_TEST);\n深度テスト（Depth Test）を有効化\nglBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);\nアルファブレンディング（透明度の計算）\nglEnable(GL_BLEND);ブレンディングを有効化\nglEnable(GL_POINT_SMOOTH);, glEnable(GL_LINE_SMOOTH);, glEnable(GL_POLYGON_SMOOTH);\n（アンチエイリアス）を有効化\nglHint(GL_POINT_SMOOTH_HINT, GL_NICEST);\nスムージング
MyOpenGLWidget -> drawObject :drawXYZAxes(); drawXYGrid(0.5, 50); drawcube();
@enduml
@startuml inline_umlgraph_44.png
User -> Timeline : Add keyframe
Timeline -> CustomScene : Insert keyframe
CustomScene -> MainWindow : Notify keyframe added
@enduml
@startuml inline_umlgraph_45.png
 User -> MainWindow : on_fovSlider_valueChanged(int value)\n FOV sliderをいじる
 MainWindow -> MyOpenGLWidget : setCameraFov(float fov)\n カメラFOVを更新
 MyOpenGLWidget -> Camera : setFov(float cameraFov)\n 新しい FOVを設置
  Camera --> MyOpenGLWidget : getFov(float cameraFov)\n FOVを更新
@enduml
